--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Validación de números telefónicos internacionales">
+    <meta name="theme-color" content="#4f46e5">
     <title>Numbers Home - Validación de Números</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    
+    <!-- Estilos externos -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/src/styles/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Numbers Home</h1>
+        <h1><i class="fas fa-phone-alt"></i> Numbers Home</h1>
         <div class="form-group">
             <div class="input-group">
-                <input type="text" id="phoneInput" placeholder="Ingresa un número telefónico">
-                <button id="validateBtn">Validar</button>
+                <input type="tel" 
+                       id="phoneInput" 
+                       placeholder="Ingresa un número telefónico" 
+                       aria-label="Número telefónico"
+                       autocomplete="tel">
+                <button id="validateBtn" aria-label="Validar número">
+                    <i class="fas fa-check"></i> Validar
+                </button>
             </div>
         </div>
-        <div id="result" class="result"></div>
-        <div id="map"></div>
+        <div id="result" class="result" aria-live="polite"></div>
+        <div id="map" aria-label="Mapa de ubicación" role="application"></div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- Scripts externos -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
