--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,60 @@
 
     <!-- Scripts externos -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="anonymous"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/services/api.js"></script>
+    <script type="module">
+        import { validatePhoneNumber } from '/src/services/api.js';
+
+        const phoneInput = document.getElementById('phoneInput');
+        const validateBtn = document.getElementById('validateBtn');
+        const resultDiv = document.getElementById('result');
+        let map;
+
+        // Inicializar mapa
+        map = L.map('map').setView([0, 0], 2);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: ' OpenStreetMap contributors'
+        }).addTo(map);
+
+        validateBtn.addEventListener('click', async () => {
+            const phoneNumber = phoneInput.value.trim();
+            if (!phoneNumber) {
+                showError('Por favor ingresa un número telefónico');
+                return;
+            }
+
+            try {
+                validateBtn.disabled = true;
+                const result = await validatePhoneNumber(phoneNumber);
+                showResult(result);
+            } catch (error) {
+                showError(error.message);
+            } finally {
+                validateBtn.disabled = false;
+            }
+        });
+
+        function showResult(data) {
+            resultDiv.className = 'result success';
+            resultDiv.innerHTML = `
+                <h3>Resultado de la validación:</h3>
+                <p>País: ${data.country_name}</p>
+                <p>Código de país: ${data.country_code}</p>
+                <p>Operador: ${data.carrier}</p>
+                <p>Tipo de línea: ${data.line_type}</p>
+                <p>Válido: ${data.valid ? 'Sí' : 'No'}</p>
+            `;
+
+            if (data.location) {
+                map.setView([data.location.latitude, data.location.longitude], 13);
+                L.marker([data.location.latitude, data.location.longitude]).addTo(map);
+            }
+        }
+
+        function showError(message) {
+            resultDiv.className = 'result error';
+            resultDiv.textContent = `Error: ${message}`;
+        }
+    </script>
 </body>
 </html>
